fix:animal product by product id
