# api/handlers/v1/animal-product.go
@@ -9,6 +9,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/spf13/cast"
 	"go.opentelemetry.io/otel/attribute"
 )
 
@@ -298,5 +299,140 @@ func (h *HandlerV1) DeleteAnimalProduct(c *gin.Context) {
 
 	c.JSON(http.StatusOK, &models.Result{
 		Message: "Animal product has been deleted",
+	})
+}
+
+
+// LIST ANIMAL PRODUCTS BY ANIMAL ID
+// @Summary LIST ANIMAL PRODUCTS BY ANIMAL ID
+// @Description Api for List products with animal which have got from animals by animal ID
+// @Tags ANIMAL-PRODUCT
+// @Accept json
+// @Produce json
+// @Param request query models.Pagination true "request"
+// @Param request query models.AnimalProductByAnimalIdFieldValues true "request"
+// @Success 200 {object} models.AnimalProductByAnimalIdRes
+// @Failure 400 {object} models.Error
+// @Failure 500 {object} models.Error
+// @Router /v1/animal-products [get]
+func (h *HandlerV1) ListAnimalProductsByAnimalID(c *gin.Context) {
+	ctx, span := otlp.Start(c, "api", "ListAnimalProductsByAnimalID")
+	span.SetAttributes(
+		attribute.Key("method").String(c.Request.Method),
+		attribute.Key("host").String(c.Request.Host),
+	)
+	defer span.End()
+
+	queryParams := c.Request.URL.Query()
+	params, errStr := utils.ParseQueryParam(queryParams)
+	if errStr != nil {
+		c.JSON(http.StatusBadRequest, models.Error{
+			Message: models.WrongInfoMessage,
+		})
+		return
+	}
+
+	animal_id := c.Query("animal_id")
+
+	res, err := h.AnimalProduct.ListProducts(ctx, params.Page, params.Limit, animal_id)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.InternalMessage)
+		h.Logger.Error("failed to list animal product by product id", l.Error(err))
+		return
+	}
+
+	var resList []*models.ProductRes
+	for _, i := range res.Products {
+		var resItem models.ProductRes
+		resItem.Id = i.ID
+		resItem.ProductName = i.Name
+		resItem.Union = i.Union
+		resItem.Description = i.Description
+		resItem.TotalCapacity = i.TotalCapacity
+		resList = append(resList, &resItem)
+	}
+
+	c.JSON(http.StatusOK, &models.AnimalProductByAnimalIdRes{
+		Animal: &models.AnimalRes{
+			Id:           res.Animal.ID,
+			Name:         res.Animal.Name,
+			CategoryName: res.Animal.CategoryName,
+			Gender:       res.Animal.Gender,
+			DateOfBirth:  res.Animal.BirthDay,
+			Description:  res.Animal.Description,
+			Genus:        res.Animal.Genus,
+			Weight:       float32(res.Animal.Weight),
+			IsHealth:     cast.ToBool(res.Animal.IsHealth),
+		},
+		Products: resList,
+		Count:          int64(res.TotalCount),
+	})
+}
+
+// LIST PRODUCT ANIMALS BY PRODUCT ID
+// @Summary LIST  PRODUCT ANIMALs BY PRODUCT ID
+// @Description Api for List animals with product which have got from animals by product ID
+// @Tags ANIMAL-PRODUCT
+// @Accept json
+// @Produce json
+// @Param request query models.Pagination true "request"
+// @Param request query models.AnimalProductByProductIdFieldValues true "request"
+// @Success 200 {object} models.AnimalProductByProductIdRes
+// @Failure 400 {object} models.Error
+// @Failure 500 {object} models.Error
+// @Router /v1/product-animals [get]
+func (h *HandlerV1) ListAnimalProductsByProductID(c *gin.Context) {
+	ctx, span := otlp.Start(c, "api", "ListAnimalProductsByProductID")
+	span.SetAttributes(
+		attribute.Key("method").String(c.Request.Method),
+		attribute.Key("host").String(c.Request.Host),
+	)
+	defer span.End()
+
+	queryParams := c.Request.URL.Query()
+	params, errStr := utils.ParseQueryParam(queryParams)
+	if errStr != nil {
+		c.JSON(http.StatusBadRequest, models.Error{
+			Message: models.WrongInfoMessage,
+		})
+		return
+	}
+
+	product_id := c.Query("product_id")
+
+	res, err := h.AnimalProduct.ListAnimals(ctx, params.Page, params.Limit, product_id)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.InternalMessage)
+		h.Logger.Error("failed to list animal product by animal id", l.Error(err))
+		return
+	}
+
+
+	var resList []*models.AnimalRes
+	for _, i := range res.Animals {
+		var resItem models.AnimalRes
+		resItem.Id = i.ID
+		resItem.Name = i.Name
+		resItem.CategoryName = i.CategoryName
+		resItem.Gender = i.Gender
+		resItem.DateOfBirth = i.BirthDay
+		resItem.Description = i.Description
+		resItem.Genus = i.Genus
+		resItem.Weight = float32(i.Weight)
+		resItem.IsHealth = cast.ToBool(i.IsHealth)
+
+		resList = append(resList, &resItem)
+	}
+
+	c.JSON(http.StatusOK, &models.AnimalProductByProductIdRes{
+		Product: models.ProductRes{
+			Id:            res.Product.ID,
+			ProductName:   res.Product.Name,
+			Union:         res.Product.Union,
+			Description:   res.Product.Description,
+			TotalCapacity: res.Product.TotalCapacity,
+		},
+		Animals: resList,
+		Count:          int64(res.TotalCount),
 	})
 }
